# minischeme

./: .gitignore  .travis.yml  Makefile.am  README.md  autogen.sh  configure.ac
src/: .gitignore  Makefile.am  TODO.md  builtins.c  builtins.h  char.c  char.h  gentests.sh  grammar.y  lisp-types.c  lisp-types.h  list.c  list.h  main.c  math.c  math.h  murmurhash.c  murmurhash.h  parser.c  parser.h  parser.y  ports.c  ports.h  primitives.c  primitives.h  redblack.c  redblack.h  selfcheck.c  selfcheck.h  test_builtins.c  test_eval.c  test_parser.c  test_primitives.c  tokenizer.h  tokenizer.l
src/env/: r5.scm
src/tests/: test-builtins.scm  test-math.scm
